airflow/logs/dag_id=btcusdt_data_ingestion/run_id=manual__2024-10-15T22:38:31.301555+00:00/task_id=ingest_btcusdt/attempt=1.log
[2024-10-15T22:38:35.673+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:38:35.689+0000] {__init__.py:51} DEBUG - Loading core task runner: StandardTaskRunner
[2024-10-15T22:38:35.706+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:38:35.710+0000] {base_task_runner.py:68} DEBUG - Planning to run as the  user
[2024-10-15T22:38:35.713+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]> from DB
[2024-10-15T22:38:35.734+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]> dependency 'Previous Dagrun State' PASSED: True, The task did not have depends_on_past set.
[2024-10-15T22:38:35.744+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]> dependency 'Task Instance Not Running' PASSED: True, Task is not in running state.
[2024-10-15T22:38:35.744+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]> dependency 'Task Instance State' PASSED: True, Task state queued was valid.
[2024-10-15T22:38:35.744+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]> dependency 'Not In Retry Period' PASSED: True, The task instance was not marked for retrying.
[2024-10-15T22:38:35.745+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]>
[2024-10-15T22:38:35.745+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]> dependency 'Previous Dagrun State' PASSED: True, The task did not have depends_on_past set.
[2024-10-15T22:38:35.750+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]> dependency 'Task Concurrency' PASSED: True, Task concurrency is not set.
[2024-10-15T22:38:35.755+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]> dependency 'Pool Slots Available' PASSED: True, There are enough open slots in default_pool to execute the task
[2024-10-15T22:38:35.756+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]> dependency 'Not In Retry Period' PASSED: True, The task instance was not marked for retrying.
[2024-10-15T22:38:35.756+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [queued]>
[2024-10-15T22:38:35.756+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 2
[2024-10-15T22:38:35.770+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): ingest_btcusdt> on 2024-10-15 22:38:31.301555+00:00
[2024-10-15T22:38:35.775+0000] {standard_task_runner.py:57} INFO - Started process 126 to run task
[2024-10-15T22:38:35.779+0000] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'btcusdt_data_ingestion', 'ingest_btcusdt', 'manual__2024-10-15T22:38:31.301555+00:00', '--job-id', '17', '--raw', '--subdir', 'DAGS_FOLDER/ingest_btcusdt_data.py', '--cfg-path', '/tmp/tmpum6tmziv']
[2024-10-15T22:38:35.782+0000] {standard_task_runner.py:85} INFO - Job 17: Subtask ingest_btcusdt
[2024-10-15T22:38:35.783+0000] {cli_action_loggers.py:65} DEBUG - Calling callbacks: [<function default_action_log at 0x7f7b0c199c10>]
[2024-10-15T22:38:35.847+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:38:35.853+0000] {task_command.py:410} INFO - Running <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [running]> on host d867809303f2
[2024-10-15T22:38:35.854+0000] {settings.py:353} DEBUG - Disposing DB connection pool (PID 126)
[2024-10-15T22:38:35.854+0000] {settings.py:212} DEBUG - Setting up DB connection pool (PID 126)
[2024-10-15T22:38:35.855+0000] {settings.py:285} DEBUG - settings.prepare_engine_args(): Using NullPool
[2024-10-15T22:38:35.857+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [running]> from DB
[2024-10-15T22:38:35.905+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:38:35.907+0000] {taskinstance.py:868} DEBUG - Clearing XCom data
[2024-10-15T22:38:35.945+0000] {retries.py:80} DEBUG - Running RenderedTaskInstanceFields._do_delete_old_records with retries. Try 1 of 3
[2024-10-15T22:38:35.962+0000] {taskinstance.py:1545} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='btcusdt_data_ingestion' AIRFLOW_CTX_TASK_ID='ingest_btcusdt' AIRFLOW_CTX_EXECUTION_DATE='2024-10-15T22:38:31.301555+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-15T22:38:31.301555+00:00'
[2024-10-15T22:38:35.963+0000] {__init__.py:117} DEBUG - Preparing lineage inlets and outlets
[2024-10-15T22:38:35.964+0000] {__init__.py:155} DEBUG - inlets: [], outlets: []
[2024-10-15T22:38:35.970+0000] {base.py:73} INFO - Using connection ID 'company_dw' for task execution.
[2024-10-15T22:38:36.012+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/ingest_btcusdt_data.py", line 73, in ingest_csv_to_postgres
    cursor.execute(sql, tuple(row))
psycopg2.errors.SyntaxError: syntax error at or near "Time"
LINE 1: INSERT INTO raw.btcusdt (Open Time,Open,High,Low,Close,Volum...
                                      ^

[2024-10-15T22:38:36.015+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:38:31.301555+00:00 [running]> from DB
[2024-10-15T22:38:36.026+0000] {taskinstance.py:2305} DEBUG - Task Duration set to 0.281203
[2024-10-15T22:38:36.027+0000] {taskinstance.py:1356} DEBUG - Clearing next_method and next_kwargs.
[2024-10-15T22:38:36.028+0000] {taskinstance.py:1345} INFO - Marking task as UP_FOR_RETRY. dag_id=btcusdt_data_ingestion, task_id=ingest_btcusdt, execution_date=20241015T223831, start_date=20241015T223835, end_date=20241015T223836
[2024-10-15T22:38:36.041+0000] {cli_action_loggers.py:83} DEBUG - Calling callbacks: []
[2024-10-15T22:38:36.041+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 17 for task ingest_btcusdt (syntax error at or near "Time"
LINE 1: INSERT INTO raw.btcusdt (Open Time,Open,High,Low,Close,Volum...
                                      ^
; 126)
[2024-10-15T22:38:36.086+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2024-10-15T22:38:36.113+0000] {dagrun.py:697} DEBUG - number of tis tasks for <DagRun btcusdt_data_ingestion @ 2024-10-15 22:38:31.301555+00:00: manual__2024-10-15T22:38:31.301555+00:00, state:running, queued_at: 2024-10-15 22:38:31.311576+00:00. externally triggered: True>: 0 task(s)
[2024-10-15T22:38:36.114+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
